# lemmy-reader

./: .gitignore  Cargo.toml  README.md  meson.build  org.gnome.Example.json
.flatpak/: cargo.sh  meson.sh  rust-analyzer.sh
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  lemmy-reader.gresource.xml  main.rs  meson.build  post_widget.blp  post_widget.rs  posts_model.rs  style.css  window.blp  window.rs
src/post/: imp.rs  mod.rs
